<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OneItem">

    <ImageView
        android:id="@+id/bookImg"
        android:layout_width="405dp"
        android:layout_height="196dp"
        android:contentDescription="@string/string_this_book_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/bookTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImg" />

    <TextView
        android:id="@+id/bookAuthar"
        android:layout_width="259dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/this_is_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <TextView
        android:id="@+id/bookDsc"
        android:layout_width="251dp"
        android:layout_height="293dp"
        android:layout_marginTop="28dp"
        android:text="@string/desc_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthar" />

    <Button
        android:id="@+id/bookFav"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/fav_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookDsc"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintEnd_toStartOf="@+id/bookTitle"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/bookAuthar"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="82dp"
        android:layout_height="25dp"
        android:layout_marginTop="64dp"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/bookDsc"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>